[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commuter"
version = "0.1.2"
description = "Portable AI coding session transfer between machines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
commuter = "commuter.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/commuter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
